large overall update

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 	        <ul class="navbar-nav mr-auto">
 	        	<li class="nav-item active"><a href="index.html" class="nav-link pl-0">Home</a></li>
 	        	<li class="nav-item"><a href="courses.html" class="nav-link">Courses</a></li>
-	        	<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	        	<li class="nav-item"><a href="creator.html" class="nav-link">Staff</a></li>
+	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+	        	<li class=""><a href="" class="nav-link"></a></li>
 	          <li class=""><a href="" class=""></a></li>
 	        </ul>
 	      </div>
@@ -76,7 +76,7 @@
           <div class="col-md-6 ftco-animate">
             <h1 class="mb-4">The more you know, the better.</h1>
             <p>More information on College can help you be prepared for the future.</p>
-            <p><a href="contact.html" class="btn btn-primary px-4 py-3 mt-3">Contact Us</a></p>
+            <p><a href="about.html" class="btn btn-primary px-4 py-3 mt-3">About Us</a></p>
           </div>
         </div>
         </div>
@@ -89,7 +89,7 @@
           <div class="col-md-6 ftco-animate">
             <h1 class="mb-4">Knowledge is power</h1>
             <p>More information on College can help you be prepared for the future.</p>
-            <p><a href="contact.html" class="btn btn-primary px-4 py-3 mt-3">Contact Us</a></p>
+            <p><a href="about.html" class="btn btn-primary px-4 py-3 mt-3">About Us</a></p>
           </div>
         </div>
         </div>
@@ -396,7 +396,8 @@
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
-      </div>
+          </div>
+        </div>
     </footer>
 
     
