fixed nav bar and footer

--- a/courses.html
+++ b/courses.html
@@ -58,8 +58,9 @@
 	        <ul class="navbar-nav mr-auto">
 	        	<li class="nav-item active"><a href="index.html" class="nav-link pl-0">Home</a></li>
 	        	<li class="nav-item"><a href="courses.html" class="nav-link">Courses</a></li>
-	        	<li class="nav-item"><a href="creator.html" class="nav-link">Staff</a></li>
 	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+	        	<li class="nav-item"><a href="creator.html" class="nav-link">Staff</a></li>
+	        	<li class=""><a href="" class="nav-link"></a></li>
 	        	<li class=""><a href="" class="nav-link"></a></li>
 	          <li class=""><a href="" class=""></a></li>
 	        </ul>
@@ -143,7 +144,7 @@
 		</section>
 
 		
-    <footer class="ftco-footer ftco-bg-dark ftco-section">
+        <footer class="ftco-footer ftco-bg-dark ftco-section">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-6 col-lg-3">
@@ -208,6 +209,7 @@
           </div>
         </div>
     </footer>
+
     
   
 
