--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	        	<li class="nav-item"><a href="courses.html" class="nav-link">Courses</a></li>
 	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	        	<li class="nav-item"><a href="creator.html" class="nav-link">Staff</a></li>
-	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+	        	<li class=""><a href="" class="nav-link"></a></li>
 	        	<li class=""><a href="" class="nav-link"></a></li>
 	          <li class=""><a href="" class=""></a></li>
 	        </ul>
