Images and Comments

--- a/courses.html
+++ b/courses.html
@@ -92,7 +92,7 @@
 								<span><i class="icon-table mr-2"></i>10K seats</span>
 								<span><i class="icon-calendar mr-2"></i>1st term</span>
 							</p>
-							<h3><a href="#">9th Grade</a></h3>
+							<h3><a href="ninth.html">9th Grade</a></h3>
 							<p> Click here if you are a current or an upcoming freshman who wants to learn more information about 9th Grade tips and tricks! </p>
 							<p><a href="ninth.html" class="btn btn-primary">More Info</a></p>
 						</div>
@@ -107,7 +107,7 @@
 								<span><i class="icon-table mr-2"></i>15K seats</span>
 								<span><i class="icon-calendar mr-2"></i>2nd Term</span>
 							</p>
-							<h3><a href="#">10th Grade</a></h3>
+							<h3><a href="tenth.html">10th Grade</a></h3>
 							<p>Click here if you are a current or upcoming Sophmore for  more information about tips and tricks about 10th grade!<br></p>
 							<p><a href="tenth.html" class="btn btn-primary">More Info</a></p>
 						</div>
@@ -121,7 +121,7 @@
 								<span><i class="icon-table mr-2"></i>20K seats</span>
 								<span><i class="icon-calendar mr-2"></i>3rd Term</span>
 							</p>
-							<h3><a href="#">11th Grade</a></h3>
+							<h3><a href="eleventh.html">11th Grade</a></h3>
 							<p>Click here if you are a current or upcoming junior who wants to learn tips and tricks about 11th grade!<br><br></p>
 							<p><a href="eleventh.html" class="btn btn-primary">More Info</a></p>
 						</div>
