--- a/creator.html
+++ b/creator.html
@@ -27,7 +27,7 @@
     	<div class="container">
     		<div class="row no-gutters d-flex align-items-center align-items-stretch">
     			<div class="col-md-4 d-flex align-items-center py-4">
-    				<a class="navbar-brand" href="index.html">KBC <span>Knowledge Before College</span></a>
+    				<a class="navbar-brand" href="index.html">Knowledge <span> Before College</span></a>
     			</div>
 		    </div>
 		  </div>
