--- a/index.html
+++ b/index.html
@@ -240,12 +240,12 @@
 			</div>
 		</section>
 
-		<section class="ftco-section testimony-section">
+		 <section class="ftco-section testimony-section">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-2">
           <div class="col-md-8 text-center heading-section ftco-animate">
-            <h2 class="mb-4">Student Says About Us</h2>
-            <p>Here we have some featured comments that some students have shared about us.</p>
+            <h2 class="mb-4">People Says About Us</h2>
+            <p>Students speak about how Knowledge Before Collage changed their pespective on high school. Parents also speak about how their child improved for learning this information.</p>
           </div>
         </div>
         <div class="row ftco-animate justify-content-center">
@@ -253,85 +253,78 @@
             <div class="carousel-testimony owl-carousel">
               <div class="item">
                 <div class="testimony-wrap d-flex">
-                  <div class="user-img mr-4" style="background-image: url(images/teacher-1.jpg)">
+                  <div class="user-img mr-4" style="background-image: url(images/person_4.jpg)">
                   </div>
                   <div class="text ml-2">
                   	<span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
-                    <p>Knowledge Before College has provided a lot of information and is helping me succeed this year and be ready for college!</p>
-                    <p class="name">Jessica Henderson</p>
-                    <span class="position">11th Grade Student</span>
+                    <p>My son said he doesn't feel like he's in the dark anymore. He used to be nervous now he is more confident.</p>
+                    <p class="name">Ricky Henderson</p>
+                    <span class="position">Father</span>
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="testimony-wrap d-flex">
-                  <div class="user-img mr-4" style="background-image: url(images/teacher-2.jpg)">
+                  <div class="user-img mr-4" style="background-image: url(images/blackstudent)">
                   </div>
                   <div class="text ml-2">
                   	<span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
-                    <p>Knowledge Before College has helped my son be prepared and now ready to go to college next year!!</p>
-                    <p class="name">Martha Dee</p>
-                    <span class="position">Mother of 12th Grade Student</span>
+                    <p>Thank you knowledge before college for teaching me what to expect in the 9th grade. I am now prepared to go to high school</p>
+                    <p class="name">Alex Dee</p>
+                    <span class="position">Student</span>
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="testimony-wrap d-flex">
-                  <div class="user-img mr-4" style="background-image: url(images/teacher-3.jpg)">
+                  <div class="user-img mr-4" style="background-image: url(images/teacher-8.jpg)">
                   </div>
                   <div class="text ml-2">
                   	<span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
-                    <p>Knowledge Before College has helped my students learn a lot more infomation on the 9th grade and helped them look for part-time jobs for the future.</p>
-                    <p class="name">Sarah Hamilton</p>
-                    <span class="position">Teacher of a 9th Grade Class</span>
+                    <p>My daughter has said this website has helped her get more infomation on high school.</p>
+                    <p class="name">Marrie Huff</p>
+                    <span class="position">Mother</span>
                   </div>
                 </div>
               </div>
+              <div class="item">
+                <div class="testimony-wrap d-flex">
+                  <div class="user-img mr-4" style="background-image: url(images/teacher-4.jpg)">
+                  </div>
+                  <div class="text ml-2">
+                  	<span class="quote d-flex align-items-center justify-content-center">
+                      <i class="icon-quote-left"></i>
+                    </span>
+                    <p>My daugter has learned a lot of imformation on high school thanks to this website.</p>
+                    <p class="name">Rina Golez</p>
+                    <span class="position">Mother</span>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="testimony-wrap d-flex">
+                  <div class="user-img mr-4" style="background-image: url(images/maxresdefault.jpg)">
+                  </div>
+                  <div class="text ml-2">
+                  	<span class="quote d-flex align-items-center justify-content-center">
+                      <i class="icon-quote-left"></i>
+                    </span>
+                    <p>I am thankful for this website for helping me understand what to look for in each grade.</p>
+                    <p class="name">Ken Bosh</p>
+                    <span class="position">Student</span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-            </div>      
-    </section>
-
-		<section class="ftco-gallery">
-    	<div class="container-wrap">
-    		<div class="row no-gutters">
-					<div class="col-md-3 ftco-animate">
-						<a href="images/image_1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/course-1.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
-					</div>
-					<div class="col-md-3 ftco-animate">
-						<a href="images/image_2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_2.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
-					</div>
-					<div class="col-md-3 ftco-animate">
-						<a href="images/image_3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_3.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
-					</div>
-					<div class="col-md-3 ftco-animate">
-						<a href="images/image_4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_4.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
-					</div>
         </div>
-    	</div>
+      </div>
     </section>
 
 		
