--- a/tenth.html
+++ b/tenth.html
@@ -212,12 +212,12 @@
 			</div>
 		</section>
 		
-    <section class="ftco-section testimony-section">
+     <section class="ftco-section testimony-section">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-2">
           <div class="col-md-8 text-center heading-section ftco-animate">
-            <h2 class="mb-4">Student Says About Us</h2>
-            <p>What scholars have to say about us!</p>
+            <h2 class="mb-4">People Says About Us</h2>
+            <p>Students speak about how Knowledge Before Collage changed their pespective on high school. Parents also speak about how their child improved for learning this information.</p>
           </div>
         </div>
         <div class="row ftco-animate justify-content-center">
@@ -225,43 +225,43 @@
             <div class="carousel-testimony owl-carousel">
               <div class="item">
                 <div class="testimony-wrap d-flex">
-                  <div class="user-img mr-4" style="background-image: url(images/teacher-1.j    pg)">
+                  <div class="user-img mr-4" style="background-image: url(images/person_4.jpg)">
                   </div>
                   <div class="text ml-2">
                   	<span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
-                    <p>This program has helped me with the knowledge I need to go through in high school and prepare myself for college.</p>
-                    <p class="name">Racky Henderson</p>
+                    <p>My son said he doesn't feel like he's in the dark anymore. He used to be nervous now he is more confident.</p>
+                    <p class="name">Ricky Henderson</p>
+                    <span class="position">Father</span>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="testimony-wrap d-flex">
+                  <div class="user-img mr-4" style="background-image: url(images/blackstudent)">
+                  </div>
+                  <div class="text ml-2">
+                  	<span class="quote d-flex align-items-center justify-content-center">
+                      <i class="icon-quote-left"></i>
+                    </span>
+                    <p>Thank you knowledge before college for teaching me what to expect in the 9th grade. I am now prepared to go to high school</p>
+                    <p class="name">Alex Dee</p>
                     <span class="position">Student</span>
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="testimony-wrap d-flex">
-                  <div class="user-img mr-4" style="background-image: url(images/teacher-2.jpg)">
+                  <div class="user-img mr-4" style="background-image: url(images/teacher-8.jpg)">
                   </div>
                   <div class="text ml-2">
                   	<span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
-                    <p>Lovely information that I needed to know before I have made a mistake.</p>
-                    <p class="name">Henry Dee</p>
-                    <span class="position">Students</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap d-flex">
-                  <div class="user-img mr-4" style="background-image: url(images/teacher-3.jpg)">
-                  </div>
-                  <div class="text ml-2">
-                  	<span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                    <p>This program has helped me engage with many studends that have the same view point as me in the future.</p>
-                    <p class="name">Mark Huff</p>
-                    <span class="position">Stuends</span>
+                    <p>My daughter has said this website has helped her get more infomation on high school.</p>
+                    <p class="name">Marrie Huff</p>
+                    <span class="position">Mother</span>
                   </div>
                 </div>
               </div>
@@ -273,23 +273,23 @@
                   	<span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
-                    <p>I introduced my daughter to this website, and I have been seeing her grow tremendously.  </p>
-                    <p class="name">Rodel Golez</p>
+                    <p>My daugter has learned a lot of imformation on high school thanks to this website.</p>
+                    <p class="name">Rina Golez</p>
                     <span class="position">Mother</span>
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="testimony-wrap d-flex">
-                  <div class="user-img mr-4" style="background-image: url(images/teacher-1.jpg)">
+                  <div class="user-img mr-4" style="background-image: url(images/maxresdefault.jpg)">
                   </div>
                   <div class="text ml-2">
                   	<span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
-                    <p>My step-son has showed many interest in technology,  and he has grown from this program.</p>
+                    <p>I am thankful for this website for helping me understand what to look for in each grade.</p>
                     <p class="name">Ken Bosh</p>
-                    <span class="position">Mother</span>
+                    <span class="position">Student</span>
                   </div>
                 </div>
               </div>
