--- a/ninth.html
+++ b/ninth.html
@@ -216,8 +216,8 @@
       <div class="container">
         <div class="row justify-content-center mb-5 pb-2">
           <div class="col-md-8 text-center heading-section ftco-animate">
-            <h2 class="mb-4">Freshmen Comments About Us</h2>
-            <p>What 9th graders have to say about our program after learning this information!</p>
+            <h2 class="mb-4">People Says About Us</h2>
+            <p>Students speak about how Knowledge Before Collage changed their pespective on high school. Parents also speak about how their child improved for learning this information.</p>
           </div>
         </div>
         <div class="row ftco-animate justify-content-center">
@@ -225,42 +225,42 @@
             <div class="carousel-testimony owl-carousel">
               <div class="item">
                 <div class="testimony-wrap d-flex">
-                  <div class="user-img mr-4" style="background-image: url(images/teacher-1.jpg)">
+                  <div class="user-img mr-4" style="background-image: url(images/person_4.jpg)">
                   </div>
                   <div class="text ml-2">
                   	<span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
-                    <p>I am really impressed by the amount of effort I put for my academics and personal life. I balanced the two proficiently and really became open minded as staying focused in school!</p>
-                    <p class="name">Norris Wells</p>
-                    <span class="position">Scholar</span>
+                    <p>My son said he doesn't feel like he's in the dark anymore. He used to be nervous now he is more confident.</p>
+                    <p class="name">Ricky Henderson</p>
+                    <span class="position">Father</span>
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="testimony-wrap d-flex">
-                  <div class="user-img mr-4" style="background-image: url(images/teacher-2.jpg)">
+                  <div class="user-img mr-4" style="background-image: url(images/blackstudent)">
                   </div>
                   <div class="text ml-2">
                   	<span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
-                    <p>I am really impressed by my daughter's diligent work and happy how by my daughter looking at this information, she's able to start of the year strong.</p>
-                    <p class="name">Henry Dee</p>
-                    <span class="position">Mother</span>
+                    <p>Thank you knowledge before college for teaching me what to expect in the 9th grade. I am now prepared to go to high school</p>
+                    <p class="name">Alex Dee</p>
+                    <span class="position">Student</span>
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="testimony-wrap d-flex">
-                  <div class="user-img mr-4" style="background-image: url(images/teacher-3.jpg)">
+                  <div class="user-img mr-4" style="background-image: url(images/teacher-8.jpg)">
                   </div>
                   <div class="text ml-2">
                   	<span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
-                    <p>I am really impressed by the amount of effort I put for my academics and personal life. I balanced the two proficiently and really became open minded as staying focused in school!</p>
-                    <p class="name">Mark Thomson</p>
+                    <p>My daughter has said this website has helped her get more infomation on high school.</p>
+                    <p class="name">Marrie Huff</p>
                     <span class="position">Mother</span>
                   </div>
                 </div>
@@ -273,23 +273,23 @@
                   	<span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
-                    <p>I am really impressed by the amount of effort I put for my academics and personal life. I balanced the two proficiently and really became open minded as staying focused in school!</p>
-                    <p class="name">Rodel Golez</p>
-                    <span class="position">Scholar</span>
+                    <p>My daugter has learned a lot of imformation on high school thanks to this website.</p>
+                    <p class="name">Rina Golez</p>
+                    <span class="position">Mother</span>
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="testimony-wrap d-flex">
-                  <div class="user-img mr-4" style="background-image: url(images/teacher-1.jpg)">
+                  <div class="user-img mr-4" style="background-image: url(images/maxresdefault.jpg)">
                   </div>
                   <div class="text ml-2">
                   	<span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
-                    <p>I am really impressed by the amount of effort I put for my academics and personal life. I balanced the two proficiently and really became open minded as staying focused in school!</p>
-                    <p class="name">Ken Boston</p>
-                    <span class="position">Father</span>
+                    <p>I am thankful for this website for helping me understand what to look for in each grade.</p>
+                    <p class="name">Ken Bosh</p>
+                    <span class="position">Student</span>
                   </div>
                 </div>
               </div>
@@ -298,7 +298,6 @@
         </div>
       </div>
     </section>
-
 
 		<section class="ftco-gallery">
     	<div class="container-wrap">
